--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
+    <main id="one">
         <div class="first">
             <h2>ETHIC ENTERTAINMENT!</h2>
             <img src="ethic entertainment/InShot_20190819_082220873-1.jpg" height="1000px">
