placed a landing image of the Ethic Entertainment crew, added an image and a brief of who ETHIC ENERTAINMENT are

--- a/index.html
+++ b/index.html
@@ -9,12 +9,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
 </head>
 <body>
     <main id="one">
         <div class="first">
-            <h2>ETHIC ENTERTAINMENT!</h2>
-            <img src="ethic entertainment/InShot_20190819_082220873-1.jpg" height="1000px">
+            <h2>ETHIC ENTERTAINMENT!</h2>       
+            <img src="ethic entertainment/InShot_20190819_082220873-1.jpg">
+        </div>
+        <div class="second">
+            <ul>
+                <li>Origin -<em></em></li>
+                <li>Genre -<em></em></li>
+                <li>Years -<em></em></li>
+                <li>Labels -<em></em></li>
+                <li>Website -<em></em></li>
+            </ul>
+        </div>
+        <div id="third">
+            <h4>WHO ARE ETHIC ENERTAINMENT?</h4>
+            <div>
+                <img src="ethic entertainment/Ethic-Entertainmnet-1.jpg">
+            </div>
+
         </div>
     </main> 
 </body>
