--- a/index.html
+++ b/index.html
@@ -30,9 +30,25 @@
         </div>
         <div id="third">
             <h4>WHO ARE ETHIC ENERTAINMENT?</h4>
-            <div>
+            <div class="intro">
                 <img src="ethic entertainment/Ethic-Entertainmnet-1.jpg">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora delectus, eius maiores vitae quasi fuga beatae repudiandae sapiente aliquam pariatur praesentium cumque architecto velit repellendus quae amet aliquid blanditiis. Fugiat.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium enim perspiciatis beatae deserunt vero, quis aut repudiandae provident dolore error ipsa ipsum. Expedita itaque minima aspernatur, nulla delectus pariatur obcaecati.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident dolores veniam fugiat velit obcaecati! Harum perspiciatis sint in maiores aut esse quod magnam enim facilis blanditiis, eaque at illo amet!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi optio ex corporis officia exercitationem, quidem placeat maiores harum omnis et. Velit earum quisquam ad nesciunt. Hic incidunt placeat magnam cumque.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus corporis quas sit fugit quibusdam maiores non obcaecati accusantium, impedit facere veniam alias, dolore ratione quos rerum sed numquam illo aspernatur.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aut eius magnam ad dignissimos voluptate accusamus, illum voluptates quam animi earum quibusdam similique. Quam deleniti culpa optio doloremque id. Aspernatur?
+                </p>
             </div>
+            <!-- <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora delectus, eius maiores vitae quasi fuga beatae repudiandae sapiente aliquam pariatur praesentium cumque architecto velit repellendus quae amet aliquid blanditiis. Fugiat.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium enim perspiciatis beatae deserunt vero, quis aut repudiandae provident dolore error ipsa ipsum. Expedita itaque minima aspernatur, nulla delectus pariatur obcaecati.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident dolores veniam fugiat velit obcaecati! Harum perspiciatis sint in maiores aut esse quod magnam enim facilis blanditiis, eaque at illo amet!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi optio ex corporis officia exercitationem, quidem placeat maiores harum omnis et. Velit earum quisquam ad nesciunt. Hic incidunt placeat magnam cumque.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus corporis quas sit fugit quibusdam maiores non obcaecati accusantium, impedit facere veniam alias, dolore ratione quos rerum sed numquam illo aspernatur.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aut eius magnam ad dignissimos voluptate accusamus, illum voluptates quam animi earum quibusdam similique. Quam deleniti culpa optio doloremque id. Aspernatur?
+            </p> -->
 
         </div>
     </main> 
