added photos af the members and placed place-holders in the paragraphs. I also added a video of the crew

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="video">
+        <video width="60%" height="100%"controls autoplay> 
+            <source src="ethic entertainment/lamba_lolo_official_video_rekles_x_seska_x_swat_x_zilladropa_h264_31721.mp4" type="video/mp4">
+        </video>
+    </div>
     <main id="one">
         <div class="first">
             <h2>ETHIC ENTERTAINMENT!</h2>       
-            <img src="ethic entertainment/InShot_20190819_082220873-1.jpg">
+            <img src="ethic entertainment/InShot_20190819_082220873-1.jpg" style="height: 800px;">
         </div>
         <div class="second">
             <ul>
@@ -41,16 +46,77 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aut eius magnam ad dignissimos voluptate accusamus, illum voluptates quam animi earum quibusdam similique. Quam deleniti culpa optio doloremque id. Aspernatur?
                 </p>
             </div>
-            <!-- <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora delectus, eius maiores vitae quasi fuga beatae repudiandae sapiente aliquam pariatur praesentium cumque architecto velit repellendus quae amet aliquid blanditiis. Fugiat.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium enim perspiciatis beatae deserunt vero, quis aut repudiandae provident dolore error ipsa ipsum. Expedita itaque minima aspernatur, nulla delectus pariatur obcaecati.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident dolores veniam fugiat velit obcaecati! Harum perspiciatis sint in maiores aut esse quod magnam enim facilis blanditiis, eaque at illo amet!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi optio ex corporis officia exercitationem, quidem placeat maiores harum omnis et. Velit earum quisquam ad nesciunt. Hic incidunt placeat magnam cumque.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus corporis quas sit fugit quibusdam maiores non obcaecati accusantium, impedit facere veniam alias, dolore ratione quos rerum sed numquam illo aspernatur.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aut eius magnam ad dignissimos voluptate accusamus, illum voluptates quam animi earum quibusdam similique. Quam deleniti culpa optio doloremque id. Aspernatur?
-            </p> -->
+        </div>
+        <div id="forth">
+            <h4>MEMBERS OF THE CREW!</h4>
+            <div class="rekles">
+                <img src="ethic entertainment/121638863_190993399140048_4091893873402838179_n.jpg" height="600px">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, porro mollitia et voluptas ab placeat reiciendis magnam expedita iusto fugit voluptatum suscipit voluptates aliquid distinctio repellat ex maiores? Quisquam, voluptatem.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum numquam deserunt deleniti reiciendis magni, dignissimos quasi voluptate sed culpa veniam. Voluptatum odio suscipit molestiae ipsa nemo, quas porro nostrum sit.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ea corporis inventore perspiciatis, nesciunt laudantium quidem dolores quas aspernatur commodi soluta voluptas sit deleniti odit quo. Et vel dolor veritatis.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum vitae quaerat veritatis nemo ab, explicabo nihil iusto, voluptate nobis blanditiis delectus facere quisquam amet aperiam ratione quia? Rerum, dolores optio.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio ipsa perferendis nam corporis ad sint, quam harum cumque id. Repudiandae doloribus ipsam dicta ratione fugit fugiat tempora ex consequuntur nesciunt!
+                </p>
+            </div>
+            <div class="zilla">
+                <p>
+                    <h5>ZILLA</h5>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolorum aspernatur consequatur voluptates, nam repudiandae tempora, quos sed dolorem cumque voluptatum modi aut facilis ad atque voluptatibus nobis incidunt similique.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere dolore pariatur omnis eius sit consequatur, eveniet saepe quos fugit rerum magnam tenetur vel, rem inventore officiis numquam fuga dolorem placeat.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, nisi eum odit, corporis, in adipisci fugiat aperiam consequuntur exercitationem minus eveniet. Modi at molestiae dolorem nihil ab placeat doloribus necessitatibus!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos est quaerat quod, rem voluptatem, vitae architecto quidem quo, hic nam commodi placeat ratione? Pariatur esse assumenda incidunt aliquid illum ut.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit nemo reiciendis ab deserunt? Harum, impedit aspernatur quod velit tenetur quidem dolorum temporibus cumque minus rem facilis nobis alias esse modi.
 
+                </p>
+                <img src="ethic entertainment/6d72e90bfae4fc09.webp" height="500px">
+            </div>
+            <div class="seska">
+                <img src="ethic entertainment/bfc3f08cf6f8ada3.webp" height="500px">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in laudantium deleniti dolor veniam doloremque itaque? Dolores, iure atque quis eum odio quidem? Atque voluptas tempora corrupti alias vel unde.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, in numquam? Pariatur, ut atque iusto nihil ea aliquam et aperiam eos quibusdam quasi doloribus illum, tenetur consequuntur cum soluta illo!
+                </p>
+            </div>
+            <div class="swat">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. At fuga nam autem iure assumenda magni quis laborum, excepturi distinctio harum qui ipsum porro iusto, cum impedit delectus inventore nihil enim!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, vel! Laborum quod dicta atque dignissimos architecto blanditiis, a suscipit culpa explicabo odio modi optio reiciendis fuga quasi laudantium voluptas repellendus.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, sunt! Ratione, vel? Laborum dignissimos neque molestias. Sit facilis minus illo incidunt dolor nemo vero tempore quasi placeat, delectus dolorem eum?
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius quae, numquam dolorem hic atque inventore. Porro, dolorem veritatis magnam earum molestias tenetur blanditiis repellendus, numquam saepe repellat, fuga dolor a?
+                </p>
+                <img src="ethic entertainment/f7fe672087657109.webp" height="500px">
+            </div>
         </div>
     </main> 
+    <main class="songs">
+        <h2>SONGS</h2>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <div class="last">
+            <h4>WHY ETHIC ENTERTAINMENT?</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officia ipsum non vero vitae nihil, quo fugit, perspiciatis dolore maxime molestias quaerat ea autem eum illo nobis iste magnam dignissimos!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem dignissimos neque corporis illum vitae aperiam quae ad expedita libero dolor fugit nulla obcaecati, aliquid asperiores. Blanditiis saepe quaerat ex? Quibusdam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt architecto tempora ex expedita omnis exercitationem magni blanditiis ut nemo ea harum recusandae hic, dolores aspernatur neque facilis porro praesentium consectetur.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quis sapiente? Eos, minus. Iure commodi nemo veritatis, officiis quibusdam et! Facere, odit? Rem veritatis ad nulla quas excepturi repudiandae beatae?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, voluptate impedit? Est rem asperiores porro cum quisquam perspiciatis saepe quae quos tenetur. Doloremque explicabo, amet neque exercitationem nobis deleniti iure!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus vero provident quasi tempore eius qui blanditiis, facilis perspiciatis sit, voluptatem consectetur cumque nemo minus? Et corporis ratione sint magnam voluptatum?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit dolores aliquid corporis dicta laudantium repellat ipsa doloribus, id veritatis nulla eligendi aut architecto voluptatum dignissimos, laboriosam sequi, ab ut delectus.
+            </p>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
