--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="video">
-        <video width="60%" height="100%"autoplay> 
+        <video width="60%" height="200px" controls> 
             <source src="ethic entertainment/lamba_lolo_official_video_rekles_x_seska_x_swat_x_zilladropa_h264_31721.mp4" type="video/mp4">
         </video>
     </div>
